# kinecko

./: flake.nix  kinecko.cabal  movies.txt
.github/workflows/: build.yml
app/: Main.hs
