cabal-version:      3.0
name:               kinecko
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Michal Atlas
maintainer:         michal_atlas+git@posteo.net
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable kinecko
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      themoviedb ^>=1.2.1,
                      text ^>=2.0.2,
                      aeson ^>=2.1.2.1,
                      directory ^>=1.3.8.5,
                      http-conduit ^>=2.3.8.3,
                      bytestring ^>=0.11.5.3,
                      process ^>=1.6.19.0
    hs-source-dirs:   app
    default-language: GHC2021
